--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.head-text {
+  background: linear-gradient(360deg, #234eb0 5%, #9010b0 100%);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  font-size: 3rem;
+
+  font-weight: 800;
+  font-size: 50px;
+  letter-spacing: 2%;
+  width: 40vw;
+}
+
+.font-semibold {
+  /* font-weight: 550; */
+  font-size: 25px;
+  margin-left: 5px;
+  line-height: 35px;
+  letter-spacing: 2%;
+}
+
+.institute-button {
+  box-shadow: 0px 1px 1px 1px #eee;
+  color: #0d6efd;
+  font-weight: 500;
+}
+
+.btn:hover {
+  color: #212529;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
   text-align: center;
-}
+  font-size: 18px;
+  background: #fff;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* Center slide text vertically */
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+item {
+  display: inline-block;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  vertical-align: top;
+  border-right: none;
+  width: 20%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+mteam_member_box {
+  padding-left: 1%;
+  display: flex;
+  justify-content: center;
+  float: left;
+  flex-direction: column;
+  padding-right: 1%;
+}
+
+.mteam_member_leader_box {
+  margin: auto;
+}
+
+.teamsubjectheading {
+  width: 171px;
+  height: 25px;
+  left: 277px;
+  top: 1561px;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 27vh;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 25px;
+  letter-spacing: 0.02em;
+  color: #234eb0;
+}
+
+.wraper_btn a {
   color: white;
+  font-size: 10px;
+  font-weight: 600;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  position: relative;
+  border-radius: 18px;
+  width: 12vw;
+  display: inline-block;
+  font-size: 20px;
+  padding: 1px;
+  text-decoration: none;
+  text-align: center;
+  background: linear-gradient(90.23deg, #234eb0 2.75%, #b656e2 104.73%);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name_desi {
+  height: 80.79px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  letter-spacing: 0.02em;
+  color: #6d7780;
+}
+
+.name_mentor {
+  padding-top: 10px;
+  width: 20vw;
+  font-size: 30px;
+  color: #354364;
+  font-weight: 600;
 }
